workloads/immich/filebrowser/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  namespace: immich
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: filebrowser
